[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Characters3D/Character3D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Originals/gltf/SellerCharacter.glb" type="PackedScene" id=2]
[ext_resource path="res://Assets/Originals/gltf/BuyerCharacter.glb" type="PackedScene" id=3]
[ext_resource path="res://Assets/Originals/gltf/StatsArrows.glb" type="PackedScene" id=4]
[ext_resource path="res://Scenes/StatsBar3D/DoubleStatsBar3D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Originals/gltf/StatsBase.glb" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Characters3D/Characters3DReceiveItem.tres" type="Animation" id=7]
[ext_resource path="res://Assets/Originals/gltf/Apple.glb" type="PackedScene" id=8]
[ext_resource path="res://Assets/Originals/gltf/Coins.glb" type="PackedScene" id=9]
[ext_resource path="res://Assets/Originals/gltf/CrossOut.glb" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Characters3D/Characters3DGrowUpDown.tres" type="Animation" id=11]

[node name="Character3D" type="Spatial"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CharacterSpatial" type="Spatial" parent="."]

[node name="SellerCharacter" parent="CharacterSpatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19014, 0 )
visible = false

[node name="BuyerCharacter" parent="CharacterSpatial" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19014, 0 )

[node name="StatsArrows" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 7.04409, 0 )
visible = false

[node name="StatsBase" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.74962, 0 )

[node name="DoubleStatsBar3D" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.88, 0 )

[node name="ItemControl" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Apple" parent="ItemControl" instance=ExtResource( 8 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="Coins" parent="ItemControl" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false

[node name="CrossOut" parent="ItemControl" instance=ExtResource( 10 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GrowUpDown = ExtResource( 11 )
anims/ReceiveItem = ExtResource( 7 )
